se encontro el bug que no permitia modificar el usuario

--- a/activeweb-abm/src/main/webapp/css/estilos_generales.css
+++ b/activeweb-abm/src/main/webapp/css/estilos_generales.css
@@ -33,3 +33,7 @@ nav ul {
     background-color: #CFE1B9;
 }
 
+.modificar-cuerpo {
+            background-color: #CFE1B9;
+            border-radius: 10px;
+}
